--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ email: arfesta@gmail.com
 
 
 avatar: yes
-#avatar_img_path: "imgs/avatar.jpg""
+avatar_img_path: "imgs/16720974.jpg"
 # You can link to your GitHub image. That way it will get updated
 # automatically whenever you change your GitHub profile picture
-avatar_img_path: "https://avatars2.githubusercontent.com/u/17301305"
+#avatar_img_path: "https://avatars2.githubusercontent.com/u/17301305"
 
 
 front_img: yes
