--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 name: Adam R. Festa
-description: "Computational Geneticist focused on genetic improvement within plant breeding programs."
+description: "Computational Geneticist"
 url: ""
 
 
