--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Adam R. Festa
 description: "Computational Geneticist"
-url: ""
+url: "https://arfest.github.io"
 
 
 # Delete the lines you don't need
